--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 * {
-  outline: 1px dotted red;
+  /* outline: 1px dotted red; */
 }
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
