--- a/src/components/Footer.module.css
+++ b/src/components/Footer.module.css
@@ -1,7 +1,48 @@
 .footerList{
     list-style: none;
+    padding: 0px;
+    margin: 0px;
     display: flex;
+    flex-wrap: wrap;
 }
 .footerTags{
-    flex-direction: row;
+    padding: 5px 0px;
+    width: 50%;
+}
+#Footer{
+    padding: 70px 0px 20px;
+    border-top: 8px solid #222;
+    background-color: black;
+    color: #757575;
+}
+.worldFooter{
+    height: 30px;
+    margin-right: 5px;
+}
+
+/* Extra small devices (phones, 600px and down) */
+@media only screen and (max-width: 600px) {
+    
+}
+
+/* Small devices (portrait tablets and large phones, 600px and up) */
+@media only screen and (min-width: 600px) {
+    .footerTags {
+        width: 25%;
+    }
+}
+
+/* Medium devices (landscape tablets, 768px and up) */
+@media only screen and (min-width: 768px) {
+
+}
+
+/* Large devices (laptops/desktops, 992px and up) */
+@media only screen and (min-width: 992px) {
+
+}
+
+/* Extra large devices (large laptops and desktops, 1200px and up) */
+@media only screen and (min-width: 1200px) {
+
 }
