--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,10 @@
 * {
   /* outline: 1px dotted red; */
 }
+body {
+  background-color: black;
+  color: #fff;
+}
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
@@ -13,4 +17,8 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.btn-danger {
+  background-color: #e50914;
 }
