--- a/src/components/LandingComps/StoryCards/StoryCards.module.css
+++ b/src/components/LandingComps/StoryCards/StoryCards.module.css
@@ -2,14 +2,42 @@
     border-top: 8px solid #222;
     padding: 3em 5em;
     display: flex;
-    flex-direction: row;
-    justify-content: space-around;
+    flex-direction: column;
+    align-items: center;
 }
 .cardContainerReverse {
-    flex-direction: row-reverse;
+    flex-direction: column;
 }
 .list {
     list-style: none;
     padding: 0;
     margin: 0;
+}
+
+/* Extra small devices (phones, 600px and down) */
+@media only screen and (max-width: 600px) {
+}
+
+/* Small devices (portrait tablets and large phones, 600px and up) */
+@media only screen and (min-width: 600px) {
+}
+
+/* Medium devices (landscape tablets, 768px and up) */
+@media only screen and (min-width: 768px) {
+}
+
+/* Large devices (laptops/desktops, 992px and up) */
+@media only screen and (min-width: 992px) {
+    .cardContainer {
+        flex-direction: row;
+        justify-content: center;
+    }
+    .cardContainerReverse {
+        flex-direction: row-reverse;
+    }
+}
+
+/* Extra large devices (large laptops and desktops, 1200px and up) */
+@media only screen and (min-width: 1200px) {
+
 }
