--- a/src/components/LandingComps/StoryCards/StoryCard/StoryCard.module.css
+++ b/src/components/LandingComps/StoryCards/StoryCard/StoryCard.module.css
@@ -1,3 +1,13 @@
 .img {
-    width: 50%;
+    max-width: 50%;
+    max-height: 300px;
 }   
+.lefty {
+    text-align: center;
+}
+@media only screen and (min-width: 992px) {
+    .lefty {
+        text-align: left;
+    }
+}
+
