--- a/src/components/LandingComps/StoryCards/StoryCards.module.css
+++ b/src/components/LandingComps/StoryCards/StoryCards.module.css
@@ -1,7 +1,7 @@
 .cardContainer {
     border-top: 8px solid #222;
-    padding: 3em 5em;
     display: flex;
+    padding: 2em 0px;
     flex-direction: column;
     align-items: center;
 }
@@ -13,31 +13,23 @@
     padding: 0;
     margin: 0;
 }
-
-/* Extra small devices (phones, 600px and down) */
-@media only screen and (max-width: 600px) {
+.FAQWrapper {
+    padding: 2em 0px;
 }
 
-/* Small devices (portrait tablets and large phones, 600px and up) */
-@media only screen and (min-width: 600px) {
-}
-
-/* Medium devices (landscape tablets, 768px and up) */
-@media only screen and (min-width: 768px) {
-}
 
 /* Large devices (laptops/desktops, 992px and up) */
 @media only screen and (min-width: 992px) {
     .cardContainer {
         flex-direction: row;
         justify-content: center;
+        padding: 3em 5em;
     }
     .cardContainerReverse {
         flex-direction: row-reverse;
     }
-}
-
-/* Extra large devices (large laptops and desktops, 1200px and up) */
-@media only screen and (min-width: 1200px) {
-
+    .lefty {
+        text-align: center;
+        background-color: yellow;
+    }
 }
