--- a/src/App.css
+++ b/src/App.css
@@ -22,3 +22,8 @@ body {
 .btn-danger {
   background-color: #e50914;
 }
+.wwm-navbar-brand {
+  font-family: 'Open Sans', sans-serif;
+  color:  #e50914;
+  font-weight: bolder;
+}
