--- a/src/components/UserDashBoardComps/NavBar/NavBar.module.css
+++ b/src/components/UserDashBoardComps/NavBar/NavBar.module.css
@@ -1,6 +1,16 @@
 .wrapper {
-    width: 99vw;
+    width: 100vw;
     position: absolute;
     top: 0;
     left: 0;
+    padding: 25px 0px;
+    background-image: linear-gradient(black, rgba(0, 0, 0, 0.658), transparent);
+}
+
+
+/* Extra large devices (large laptops and desktops, 1200px and up) */
+@media only screen and (min-width: 1200px) {
+    .wrapper{
+        height: auto;
+    }
 }
