--- a/src/components/UserDashBoardComps/NavBar/NavBar.module.css
+++ b/src/components/UserDashBoardComps/NavBar/NavBar.module.css
@@ -5,6 +5,7 @@
     left: 0;
     padding: 25px 0px;
     background-image: linear-gradient(black, rgba(0, 0, 0, 0.658), transparent);
+    z-index: 25;
 }
 
 
