--- a/src/components/UserDashBoardComps/Carsoules/Carousel/Carousel.module.css
+++ b/src/components/UserDashBoardComps/Carsoules/Carousel/Carousel.module.css
@@ -4,44 +4,98 @@ section {
     position: relative;
     display: grid;
     grid-template-columns: repeat(5, auto);
-    margin: 20px 0;
+    margin: 50px 0;
 }
 .wrapper {
     display: grid;
     grid-template-columns: repeat(3,100%);
     overflow:hidden;
     scroll-behavior: smooth;
-
 }
 .item {
-    padding: 0 2px;
+    padding: 0 20px;
     transition: 250ms;
     background-repeat:  no-repeat; 
     background-size: cover; 
     max-height: 300px; 
     max-width: 300px ;
+    position: relative;
 }
-.item :hover { 
-    margin: 0 40px;
-    transform: scale(1.2);
-    background:red;
+
+.wrapper :nth-child(2) {
+    margin-left: 90px;
 }
-.arrow__btn {
-    position: absolute;
-    color: #fff;
-    text-decoration: none;
-    font-size: 6em;
-    background:rgb(0,0,0);
-    width: 80px;
+/* .theContainer {
+    width: 50%;
+    max-width: 300px;
+  } */
+  
+  
+.overlayer {
+    position: absolute; 
+    top: 0; 
+    width: max-content;
+    background: rgb(0, 0, 0);
+    background: rgba(0, 0, 0, 0.5); /* Black see-through */
+    color: #f1f1f1; 
+    transition: .5s ease;
+    opacity:0;
+    color: white;
+    font-size: 20px;
     padding: 20px;
     text-align: center;
+}
+
+.item:hover .overlayer {
+    opacity: 1;
+}
+.item :hover { 
+    transition: .5s ease;
+    transform: scale(1.2);
+}
+/* .triangleLeft {
+} */
+
+.arrow__btn {
+    position: absolute;
+    /* vertical-align: middle; */
+    /* color: #fff; */
+    /* text-decoration: none; */
+    /* font-size: 6em; */
+    /* background:rgb(0,0,0); */
+    /* width: 80px; */
+    /* padding: 20px; */
+    /* text-align: center; */
+    /* top:0; bottom:0; left:0; */
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     z-index: 1;
 }
-.arrow__btn :nth-of-type(1) {
-    top:0; bottom:0; left:0;
-    background: linear-gradient(-90deg, rgba(0,0,0,0) 0%, rgba(0,0,0,1) 100%);
-}
-.arrow__btn :nth-of-type(2) {
+.arrow__btnRight {
     top:0; bottom:0; right: 0;
-    background: linear-gradient(90deg, rgba(0,0,0,0) 0%, rgba(0,0,0,1) 100%);
+}
+.arrow__btnLeft {
+    top:0; bottom:0; left: 0;
+}
+.arrow {
+    width: 0;
+    height: 0;
+    border-bottom: 25px solid transparent;
+    border-top: 25px solid transparent;
+}
+.leftArrow{
+    border-right: 50px solid #555;
+    /* background: linear-gradient(-90deg, rgba(0,0,0,0) 0%, rgba(0, 0, 0, 0) 100%); */
+}
+.rightArrow {
+    /* border-top: 25px solid transparent; */
+    border-left: 50px solid #555;
+    /* border-bottom: 25px solid transparent; */
+    /* background: linear-gradient(90deg, rgba(0,0,0,0) 0%, rgba(0, 0, 0, 0) 100%); */
+}
+
+section img {
+    height: 300px;
 }
